from model.symbols import Symbols

class Player:
    def __init__(self, symbol: Symbols, board) -> None:
        self.symbol = symbol
        self.board = board
        
        
        
        
        


